[package]
name = "loungy"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }

[dependencies]
catppuccin = "1.3.0"
global-hotkey = "0.4.2"
gpui = { git = "https://github.com/zed-industries/zed" }
nucleo = "0.3.0"
parking_lot = "0.12.1"
serde = "1.0.195"
serde_json = "1.0.111"
swift-rs = "1.0.6"
numbat = "1.9.0"
numbat-exchange-rates = "0.4.0"
whoami = { version = "1.4.1", default-features = false }
anyhow = "1.0.79"
rust-embed = "8.2.0"
regex = "1.10.3"
async-std = { version = "1.12.0", features = ["async-channel"] }
simple-easing = "1.0.1"
dark-light = "1.0.0"
bonsaidb = { version = "0.5.0", features = ["local-full"] }
log = "0.4.20"
toml = "0.8.10"
env_logger = "0.11.1"
