[package]
name = "loungy"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }

[dependencies]
catppuccin = "1.3.0"
global-hotkey = "0.4.2"
gpui = { git = "https://github.com/zed-industries/zed" }
nucleo = "0.3.0"
parking_lot = "0.12.1"
serde = "1.0.195"
serde_json = "1.0.111"
numbat = "1.10.0"
numbat-exchange-rates = "0.5.0"
whoami = { version = "1.4.1", default-features = false }
anyhow = "1.0.79"
rust-embed = "8.2.0"
regex = "1.10.3"
simple-easing = "1.0.1"
dark-light = "1.0.0"
bonsaidb = { version = "0.5.0", features = ["local-full"] }
log = "0.4.20"
toml = "0.8.10"
env_logger = "0.11.1"
time = { version = "0.3.32", features = [
    "serde",
    "formatting",
    "parsing",
    "serde-well-known",
    "local-offset",
] }
url = "2.5.0"
async-std = { version = "1.12.0", features = [
    "unstable",
    "attributes",
    "tokio1",
] }
futures = "0.3.30"
matrix-sdk-crypto = { version = "0.7.0", optional = true }
matrix-sdk = { version = "0.7.1", default_features = false, optional = true, features = [
    "e2e-encryption",
    "markdown",
    "socks",
    "anyhow",
    "image-proc",
    "experimental-sliding-sync",
    "sqlite",
    "bundled-sqlite",
    "rustls-tls",
] }
rand = "0.8.5"
arboard = { version = "3.3.1", optional = true }
image = "0.23"
tz-rs = "0.6.14"
crossbeam-channel = "0.5.12"
website-icon-extract = "0.5.3"
reqwest = "0.11.24"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.6"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop_entry_parser = "1.3.0"
freedesktop-icons = "0.2.6"

[features]
tailscale = []
bitwarden = []
clipboard = ["dep:arboard"]
matrix = ["dep:matrix-sdk", "dep:matrix-sdk-crypto"]

[[bin]]
name = "loungy"
