[package]
name = "loungy-root-command"
version = "0.1.0"
edition = "2021"

[dependencies]
wasi = "0.13.1"
wit-bindgen = { version = "0.30.0" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "loungy:command"

[package.metadata.component.target.dependencies]
"loungy:command" = { path = "../../wit/" }
"wasi:http" = { path = "../../wit/deps/http" }
"wasi:random" = { path = "../../wit/deps/random" }
"wasi:cli" = { path = "../../wit/deps/cli" }
"wasi:io" = { path = "../../wit/deps/io" }
"wasi:clocks" = { path = "../../wit/deps/clocks" }
"wasi:filesystem" = { path = "../../wit/deps/filesystem" }
"wasi:sockets" = { path = "../../wit/deps/sockets" }
